--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <!--  about  -->
 
-<section class="section about center" id="about">
+<section class="section about center scrollspy" id="about">
     <h1 class="amber-text about-text">About Us</h1>
 
     <div class="row">
@@ -124,7 +124,7 @@
 </section>
 
 <!--  services  -->
-<section class="section services center" id="service">
+<section class="section services center scrollspy" id="service">
 <h1 class="amber-text service-text">Services</h1>
     <div class="row">
 
@@ -206,7 +206,7 @@
 
 <!--  clients  -->
 
-<section class="client section center" id="contact">
+<section class="client section center scrollspy" id="contact">
     <h1 class="amber-text clients-text ">Contacts</h1>
     <div class="container">
     <div class="row">
@@ -317,6 +317,8 @@ $(document).ready(function () {
                 $('nav').addClass('transparent');
             }
         });
+
+        $('.scrollspy').scrollSpy();
 
 
 
